# azure-pipelines-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: release.yaml
examples/entrypoint/: README.md  main.rs  template.rs
src/: lib.rs  main.rs
src/core/v1/: depends.rs  extends.rs  job.rs  mod.rs  pipeline.rs  stage.rs  step.rs  trigger.rs
src/templates/: mod.rs  parameterized.rs
src/templates/entrypoints/: example.rs
src/validator/: dependencies.rs
